--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "compass": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
+    "ejs": "^2.5.6",
     "express": "~4.14.1",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
